# test-reserve-items

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.py
app/: routers.py
core/: app.py  base.py  db.py  exceptions.py  logger.py  mixins.py  models.py  queries.py  repositories.py  routers.py  schemas.py  services.py  settings.py  uow.py
core/alembic/: env.py
core/alembic/versions/: 11eef5c897e6_fix_price_column.py  20385592b372_fix_item.py  3802af4b9cd9_update_store.py  4e22b4b97719_add_orders_models_add_is_superuser_for_.py  4ea71324d254_simplify_order.py  615d51be09d5_users.py  87a491b3e31a_fix_order_discount.py  88f5af948508_more_simplify_order.py  a73bc4b83cf7_update_store.py  c379c34f307b_set_ondelete.py  de86778bd7c6_fix_item.py
core/health/: routers.py
core/orders/: models.py  repositories.py  routers.py  schemas.py  services.py
core/store/: entities.py  enums.py  models.py  queries.py  repositories.py  routers.py  schemas.py  services.py  utils.py
core/users/: entities.py  models.py  repositories.py  repository.py  routers.py  schemas.py  service.py  services.py
tests/: conftest.py  test_db.py  test_health.py  test_users.py
