[tool.poetry]
name = "ddds"
version = "0.1.0"
description = ""
authors = ["Volodymyr A. <volodymyr.arestarkhov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
asyncpg = "^0.29.0"
pytest = "^8.3.3"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
uvicorn = "^0.31.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
